--- a/pom.xml
+++ b/pom.xml
@@ -85,8 +85,6 @@
             <version>1.2.75</version>
         </dependency>
 
-<<<<<<< HEAD
-=======
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-connector-redis_2.11</artifactId>
@@ -106,7 +104,19 @@
             <version>5.1.49</version>
         </dependency>
 
->>>>>>> f1f979a (flink window and windowFunction)
+        <!-- 如何要使用RocksDBBackend, 需要先引入依赖:-->
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-statebackend-rocksdb_${scala.binary.version}</artifactId>
+            <version>${flink.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-cep_${scala.binary.version}</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
 
     </dependencies>
 
